# computational_intelligence

./: .gitignore
lab1/: README.md  lab1.ipynb  pyproject.toml
lab2/: README.md  lab2.ipynb  pyproject.toml
lab3/: README.md  RLAgent.py  lab3_nim.ipynb  nim_utils.py  nimply.py  pyproject.toml  task1_lib.py  task2_lib.py  task3_lib.py  task4_lib.py
lab3/RL_libs/: __init__.py
