[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Alessio Carachino <alessio.carachino.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
rand = "^0.3.0"
scipy = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
