[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Alessio Carachino <alessio.carachino.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
jupyter = "^1.0.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
