[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["Alessio Carachino <alessio.carachino.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
